Fix other projects href

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p>Coming Soon...</p>
         </a>
 
-        <a href="./">
+        <a href="../../">
           <i class="ri-user-shared-fill"></i>
           <h2>Altri progetti di Splack</h2>
           <p>Resta aggiornato sui progetti di Splack</p>
