Updated meta tags

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
     />
     <meta property="og:type" content="summary" />
+    <meta property="og:site_name" content="MEMOX Community" />
     <meta property="og:title" content="MEMOX Community" />
     <meta
       property="og:description"
       content="Benvenuti nel portale ufficiale della MEMOX Community!"
     />
-    <meta property="og:url" content="https://splack.is-a.dev/memox/" />
     <meta
       property="og:image"
-      url="https://splack.is-a.dev/memox/static/brand/meta.png"
+      content="https://splack.is-a.dev/memox/static/brand/meta.png"
     />
+    <meta property="og:image:alt" content="MEMOX Community" />
+    <meta property="og:url" content="https://splack.is-a.dev/memox/" />
   </head>
 
   <body>
